app/assets/stylesheets/welcome.scss
$introduction_height: 550px;

.main-content.welcome {
  .btn {
    margin-top: 45px;
  }

  .introduction {
    width: 100%;
    font-family: "Gotham SSm A";

    .ads {
      width: 100%;
      height: $introduction_height;
      overflow-y: hidden;

      img {
        width: 100%;
        height: auto;
        position: relative;
        top: -100px;
      }

      .info {
        position: absolute;
        z-index: 1;
        top: 77px;
        width: 100%;
        height: $introduction_height;
        text-align: center;
        font-weight: 400;

        padding-top: 15%;
        color: #fff;
        background-color: rgba(0,0,0, 0.35);

        p {
          font-size: 14px;
          margin-top: 20px;
        }
      }
    }

    .description {
      font-size: 20px;
      text-align: center;

      padding: 30px 10em;
      color: #222;
    }
  }

  .overview {
    font-family: "Gotham SSm A";
    color: #fff;
    background-color: #5bc0de;


    img, .content {
      padding: 0;
    }

    .content {
      padding-top: 6em;
      padding-left: 12em;
      padding-right: 5em;
    }

  }

  .campaign {
    font-family: "Gotham SSm A";
    color: #fff;
    background-color: #CD2348;
    margin-top: 45px;


    img, .content {
      padding: 0;
    }

    .content {
      padding-top: 6em;
      padding-left: 12em;
      padding-right: 5em;
    }

  }
}

